@@ -615,7 +615,7 @@ public class Util {
 
          Assert.assertEquals("Comparing actual and expected results. ",
                  expectedResList, actualResList);
-         
+
     }
 
     /**
@@ -1334,14 +1334,6 @@ public class Util {
         return false;
     }
 
-    public static boolean isSparkExecType(ExecType execType) {
-        if (execType.name().toLowerCase().startsWith("spark")) {
-            return true;
-        }
-
-        return false;
-    }
-
     public static void sortQueryOutputsIfNeed(List<Tuple> actualResList, boolean toSort){
         if( toSort == true) {
             for (Tuple t : actualResList) {
@@ -1464,6 +1456,20 @@ public class Util {
 
     public static boolean isMapredExecType(ExecType execType) {
         return execType == ExecType.MAPREDUCE;
+    }
+
+    public static boolean isTezExecType(ExecType execType) {
+        if (execType.name().toLowerCase().startsWith("tez")) {
+            return true;
+        }
+        return false;
+    }
+
+    public static boolean isSparkExecType(ExecType execType) {
+        if (execType.name().toLowerCase().startsWith("spark")) {
+            return true;
+        }
+        return false;
     }
 
     public static String findPigJarName() {
